--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "Node.js Sample",
+  "name": "Heroku Telegram python deploy",
   "description": "Heroku Telegram python deploy",
   "repository": "https://github.com/AnshumanFauzdar/telegram-bot-heroku-deploy",
   "logo": "https://node-js-sample.herokuapp.com/node.png",
